Update HTML and Add Model Code to app.js
HTML has been updated to include necessary starting scripts and the
app.js file has had the model data added.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>P5-1 Neighborhood Map Project</title>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <article>This is an article.</article>
+
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
