--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-
+        <ul data-bind='foreach: locationArray'>
+            <li data-bind='text: name'></li>
+        </ul>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
