Add Google Map to Web App
Added the Google Maps API to the web page. Web page loads with basic
google map.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <ul data-bind='foreach: locationArray'>
             <li data-bind='text: name'></li>
         </ul>
+        <div id="map"></div>
         <script type="text/javascript" src="js/app.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9B4lZmTGjV_0s4GSHbC0zVPpBxr5fWfg&callback=initMap"
+        async defer></script>
     </body>
 </html>
