--- a/index.html
+++ b/index.html
@@ -2,18 +2,47 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>P5-1 Neighborhood Map Project</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <ul data-bind='foreach: locationArray'>
-            <li data-bind='text: name'></li>
-        </ul>
-        <div id="map"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">
+                            <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
+                        Filter</button>
+                        </span>
+                    </div>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr><th>List of Bars in Downtown Boise, ID</th></tr>
+                        </thead>
+                        <tbody data-bind='foreach: locationArray'>
+                            <tr>
+                                <td data-bind='text: name'></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-9">
+                    <div id="map"></div>
+                </div>
+            </div>
+        </div>
         <script type="text/javascript" src="js/app.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9B4lZmTGjV_0s4GSHbC0zVPpBxr5fWfg&callback=initMap"
         async defer></script>
+    <footer>
+        <p class="text-center">Glyphicons provided for free via <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="http://glyphicons.com/">Glyphicons.com</a></p>
+    </footer>
     </body>
 </html>
