--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
-                        Filter</button>
-                        </span>
+                    <div>
+                        <input id="searchTerm" type="text" class="form-control" placeholder="Search for..." onkeyup="doSearch()">
                     </div>
-                    <table class="table table-hover">
+                    <div>
+                    <table id="dataTable" class="table table-hover">
                         <thead>
                             <tr><th>List of Bars in Downtown Boise, ID</th></tr>
                         </thead>
@@ -32,6 +28,7 @@
                             </tr>
                         </tbody>
                     </table>
+                    </div>
                 </div>
                 <div class="col-md-9">
                     <div id="map"></div>
