--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
             <div class="row">
                 <div class="col-md-3">
                     <div>
-                        <input id="searchTerm" type="text" class="form-control" placeholder="Search for..." onkeyup="doSearch()">
+                        <input id="searchTerm" type="text" class="form-control" placeholder="Search..." onkeyup="doSearch()">
                     </div>
                     <div>
                     <table id="dataTable" class="table table-hover">
-                        <thead>
-                            <tr><th>List of Bars in Downtown Boise, ID</th></tr>
-                        </thead>
                         <tbody data-bind='foreach: locationArray'>
                             <tr>
                                 <td data-bind='text: name'></td>
