--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             <div class="row">
                 <div class="col-md-3">
                     <div>
-                        <input id="searchTerm" type="text" class="form-control" placeholder="Search..." onkeyup="doSearch()">
+                        <input id="searchTerm" type="text" class="form-control" placeholder="Search..." onkeyup="doSearch(locationModel)">
                     </div>
                     <div>
                     <table id="dataTable" class="table table-hover">
+                        <thead>
+                            <tr><th>List of Bars in Boise, ID</th></tr>
+                        </thead>
                         <tbody data-bind='foreach: locationArray'>
                             <tr>
                                 <td data-bind='text: name'></td>
