Updated code to allow for live search with auto map updates.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div>
-                        <input id="s-input" type="search" class="form-control" placeholder="Search..." data-bind="textInput: query, valueUpdate: 'keyup'"></input>
-                        <input placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
+                        <input id="s-input" class="form-control" placeholder="Search..." type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
                     </div>
                     <div>
                     <ul data-bind="foreach: locationArray">
