--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <input id="s-input" class="form-control" placeholder="Search..." type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
                     </div>
                     <div>
-                    <ul class="list-group" data-bind="foreach: locationArray">
+                    <ul id="location-list" class="list-group" data-bind="foreach: locationArray">
                         <li class="list-group-item" data-bind="text: name"></li>
                     </ul>
                     </div>
