--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                         <input id="s-input" class="form-control" placeholder="Search..." type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
                     </div>
                     <div>
-                    <ul id="location-list" class="list-group" data-bind="foreach: locationArray">
-                        <li class="list-group-item" data-bind="text: name"></li>
-                    </ul>
+                        <ul id="location-list" class="list-group" data-bind="foreach: locationArray">
+                            <li class="list-group-item" data-bind="text: name, click: $parent.listItemClick, css: { 'highlight' : isClicked }"></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -31,8 +31,8 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9B4lZmTGjV_0s4GSHbC0zVPpBxr5fWfg&callback=initMap"
         async defer></script>
-    <footer>
-        <p class="text-center">Glyphicons provided for free via <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="http://glyphicons.com/">Glyphicons.com</a></p>
-    </footer>
+        <footer>
+            <p class="text-center">Glyphicons provided for free via <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="http://glyphicons.com/">Glyphicons.com</a></p>
+        </footer>
     </body>
 </html>
